err/instagram-python.err
Listing '.'...
Listing './bin'...
Compiling './bin/createfontdatachunk.py'...
Compiling './bin/enhancer.py'...
Compiling './bin/explode.py'...
Compiling './bin/gifmaker.py'...
Compiling './bin/painter.py'...
Compiling './bin/pilconvert.py'...
Compiling './bin/pildriver.py'...
Compiling './bin/pilfile.py'...
Compiling './bin/pilfont.py'...
Compiling './bin/pilprint.py'...
Compiling './bin/player.py'...
Compiling './bin/thresholder.py'...
Compiling './bin/viewer.py'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/InstagramAPI'...
Listing './lib/python3.5/site-packages/InstagramAPI/src'...
Compiling './lib/python3.5/site-packages/InstagramAPI/src/Checkpoint.py'...
***   File "./lib/python3.5/site-packages/InstagramAPI/src/Checkpoint.py", line 33
    if not os.path.isdir(self.settingsPath): os.mkdir(self.settingsPath, 0777)
                                                                            ^
SyntaxError: invalid token

Compiling './lib/python3.5/site-packages/InstagramAPI/src/Instagram.py'...
***   File "./lib/python3.5/site-packages/InstagramAPI/src/Instagram.py", line 69
    os.mkdir(self.IGDataPath, 0777)
                                 ^
SyntaxError: invalid token

Compiling './lib/python3.5/site-packages/InstagramAPI/src/InstagramRegistration.py'...
***   File "./lib/python3.5/site-packages/InstagramAPI/src/InstagramRegistration.py", line 234
    print "REQUEST: " + endpoint
                    ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/InstagramAPI/src/Utils'...
Listing './lib/python3.5/site-packages/InstagramAPI/src/http'...
Compiling './lib/python3.5/site-packages/InstagramAPI/src/http/HttpInterface.py'...
***   File "./lib/python3.5/site-packages/InstagramAPI/src/http/HttpInterface.py", line 77
    print "REQUEST: " + endpoint
                    ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/InstagramAPI/src/http/Response'...
Listing './lib/python3.5/site-packages/PIL'...
Listing './lib/python3.5/site-packages/PIL/.libs'...
Listing './lib/python3.5/site-packages/Pillow-3.4.2.dist-info'...
Listing './lib/python3.5/site-packages/curl'...
Listing './lib/python3.5/site-packages/instagram_python-1.4.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pycurl-7.43.0.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/doc'...
Listing './share/doc/pycurl'...
Listing './share/doc/pycurl/examples'...
Compiling './share/doc/pycurl/examples/basicfirst.py'...
Compiling './share/doc/pycurl/examples/file_upload.py'...
Compiling './share/doc/pycurl/examples/linksys.py'...
Listing './share/doc/pycurl/examples/quickstart'...
Compiling './share/doc/pycurl/examples/quickstart/file_upload_buffer.py'...
Compiling './share/doc/pycurl/examples/quickstart/file_upload_real.py'...
Compiling './share/doc/pycurl/examples/quickstart/file_upload_real_fancy.py'...
Compiling './share/doc/pycurl/examples/quickstart/follow_redirect.py'...
Compiling './share/doc/pycurl/examples/quickstart/form_post.py'...
Compiling './share/doc/pycurl/examples/quickstart/get.py'...
Compiling './share/doc/pycurl/examples/quickstart/get_python2.py'...
Compiling './share/doc/pycurl/examples/quickstart/get_python3.py'...
Compiling './share/doc/pycurl/examples/quickstart/response_headers.py'...
Compiling './share/doc/pycurl/examples/quickstart/response_info.py'...
Compiling './share/doc/pycurl/examples/quickstart/write_file.py'...
Compiling './share/doc/pycurl/examples/retriever-multi.py'...
Compiling './share/doc/pycurl/examples/retriever.py'...
Compiling './share/doc/pycurl/examples/sfquery.py'...
Compiling './share/doc/pycurl/examples/smtp.py'...
Compiling './share/doc/pycurl/examples/ssh_keyfunction.py'...
Compiling './share/doc/pycurl/examples/xmlrpc_curl.py'...
Listing './share/python-wheels'...
